Refactored create and delete relation APIs; added permission check middleware for POST routes and separate middleware for other routes; added GET and POST APIs for middleware testing
