# grpc_handler/user/deleteRelation.go
@@ -12,21 +12,21 @@ import (
 )
 
 func (s *Server) DeleteRelationship(ctx context.Context, req *pb.DeleteRelationshipRequest) (*pb.DeleteRelationshipResponse, error) {
-	if req.Relation == "" || req.Username == "" || req.Resource == "" || req.ResourceId == "" {
+	if req.RoleName == "" || req.UserId == "" || req.ResourceName == "" || req.PrincipalId == "" {
 		return nil, status.Errorf(codes.InvalidArgument, "Missing required fields in request")
 	}
 	err := client.DeleteRelationship(
-		req.Relation,
-		req.Username,
-		req.Resource,
-		req.ResourceId,
+		req.RoleName,
+		req.UserId,
+		req.ResourceName,
+		req.PrincipalId,
 	)
 
 	if err != nil {
 		log.Printf("Error deleting relationships: %v", err)
 		return nil, err
 	}
-	relationshipString := "user" + ":" + req.Username + "#" + req.Relation + "@" + req.Resource + ":" + req.ResourceId
+	relationshipString := "user" + ":" + req.UserId + "#" + req.RoleName + "@" + req.ResourceName + ":" + req.PrincipalId
 	return &pb.DeleteRelationshipResponse{
 		StatusCode:    200,
 		Message:       "Relationship Deleted successfully",
