# routes/user_routes.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"github.com/Kisanlink/aaa-service/handler/user"
+	"github.com/Kisanlink/aaa-service/middleware"
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 )
@@ -16,4 +17,13 @@ func UsersRoutes(r *gin.RouterGroup, database *gorm.DB, s user.UserHandler) {
 	r.DELETE("/assign-role", s.DeleteAssignRoleRestApi)
 	r.POST("/forgot-password", s.PasswordResetHandler)
 	r.POST("token-transaction", s.TokenUsageHandler)
+	permMiddleware := middleware.NewPermissionMiddleware(database)
+	permTestHandler := middleware.NewPermissionTestHandler()
+	r.GET("/test-permission-get",
+		permMiddleware.GeneralPermissionCheck(),
+		permTestHandler.TestPermissionGET)
+
+	r.POST("/test-permission-post",
+		permMiddleware.CanCreatePermission(),
+		permTestHandler.TestPermissionPOST)
 }
